2009-03-20 14:40  marques

	* [r5092] src/lda_x_2d.c: Forgot this file... sorry.

2009-03-20 12:00  marques

	* [r5091] DONE, src/lda_c_2d_prm.c, src/lda_c_hl.c, src/test.c:
	  Some more fixes, and now HL also has Kxc.

2009-03-20 09:48  marques

	* [r5090] configure.ac, src/Makefile.am, src/lda_c_1d_csc.c,
	  src/lda_c_2d_amgb.c, src/lda_x.c, src/test.c, src/work_lda.c,
	  src/work_lda_1d.c: Reorganization of the LDAs of reduced
	  dimension. Now there is a common
	  driver routine in work_lda that handles 1, 2, and 3 dimensions. I
	  also
	  took the opportunity to add fxc and kxc to the 2d ldas (both
	  exchange
	  and amgb). I do not know if his is useful (someone interested in
	  hyperpolarizabilities of 2D systems?), but I added it for
	  completeness.

2009-03-17 10:03  mjv500

	* [r5086] src/lda_x.c: MIGUEL CHECK THIS stray float

2009-03-16 08:33  marques

	* [r5085] src/gga_x_am05.c, src/gga_x_b86.c, src/gga_x_b86_mgc.c,
	  src/gga_x_b88.c, src/gga_x_bayesian.c, src/gga_x_dk87.c,
	  src/gga_x_ft97.c, src/gga_x_g96.c, src/gga_x_lg93.c,
	  src/gga_x_mpbe.c, src/gga_x_optx.c, src/gga_x_pbe.c,
	  src/gga_x_pbea.c, src/gga_x_pw86.c, src/gga_x_pw91.c,
	  src/gga_x_rpbe.c, src/gga_x_wc.c, src/lda_x.c, src/mgga_x_m06l.c,
	  src/test.c, src/util.h, src/work_gga_x.c: Som cleaning in the
	  ggas

2009-03-11 09:00  marques

	* [r5078] src/string_f.h: It is easier to maintain a copy of this
	  file here, so that this library
	  is indeed independent.

2009-03-11 08:58  marques

	* [r5077] src/Makefile.am, src/lda_c_vwn.c, src/xc_f.c: Now also
	  VWN has analytical Kxc

2009-03-09 16:52  mjv500

	* [r5069] configure.ac: had to fix dependencies after removal of
	  libstring_f - someone competent check this

2009-03-09 14:08  marques

	* [r5067] DONE, src/lda_c_pw.c: Now pw also has analytical Kxc

2009-03-09 12:30  marques

	* [r5065] DONE, src/test.c: I got rid of libstring_f. It was
	  replaced simply by a header file